view controller undkleine änerungen

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>naji</title>
+    <meta http-equiv="refresh" content="0; url=./login.html" />
+    <title>Index redirect to login</title>
 </head>
 <body>
-<h2>najinaji</h2>
 
 </body>
 </html>
